@@ -6,6 +6,7 @@ version 0.96.4
 	* New key bindings: Cycle through construction yards with 'H' and factories with 'F'
 	* Improve performance of Fog of War
 	* Units can now be instructed to find the next repair yard on their own
+	* Save game speed, scroll speed and sound volume as game settings
 	* New game option "Manual Carryall Drops"
 	* Save screenshots as PNG
 	* 64-bit builds for Windows
